# pyhrol

./: .gitignore  CMakeLists.txt  LICENSE  README.en  README.ru
cmake/: pyhrol-config.cmake.template  pyhrol_init.cmake
cpp/: array_square.cpp  array_void.cpp  binary_operations.cpp  demangling.cpp  printf_parser.cpp  pyhrol_auto_holder.cpp  pyhrol_check_calls.cpp  pyhrol_common.cpp  pyhrol_container.cpp  pyhrol_exception_handler.cpp  pyhrol_flags.cpp  pyhrol_generator.cpp  pyhrol_index.cpp  pyhrol_init.cpp  pyhrol_keywords.cpp  pyhrol_self.cpp  pyhrol_self_functions.cpp  pyhrol_self_methods.cpp  pyhrol_self_modules.cpp  pyhrol_self_types.cpp  pyhrol_starter.cpp  pyhrol_trace.cpp  pyhrol_tuple_base.cpp  pyhrol_tuple_base_safe.cpp  pyhrol_tuple_describer.cpp  pyhrol_tuple_describer_flexible.cpp  pyhrol_tuple_describer_safe.cpp  pyhrol_tuple_fill_state.cpp  pyhrol_tuple_fill_state_getsetter.cpp  pyhrol_tuple_fill_state_normal.cpp  pyhrol_tuple_format.cpp  pyhrol_tuple_in.cpp  pyhrol_tuple_in_default_impl.cpp  pyhrol_tuple_in_safe_impl.cpp  pyhrol_tuple_out.cpp  pyhrol_tuple_out_default_impl.cpp  pyhrol_tuple_out_safe_impl.cpp  pyhrol_tuple_state.cpp  pyhrol_tuples.cpp  pyhrol_tuples_data2_default_impl.cpp  (+14 more)
dox/: pyhrol.doxy
examples/: CMakeLists.txt  example_0010.cpp  example_0010.py  example_0010.txt  example_0020.cpp  example_0020.py  example_0020.txt  example_0030.cpp  example_0030.py  example_0030.txt  example_0040.cpp  example_0040.py  example_0040.txt  example_0050.cpp  example_0050.py  example_0050.txt  example_0060.cpp  example_0060.py  example_0060.txt  example_0070.cpp  example_0070.py  example_0070.txt  example_0080.cpp  example_0080.py  example_0080.txt  example_0090.cpp  example_0090.py  example_0090.txt  example_0095.cpp  example_0095.py  example_0095.txt  example_0100.cpp  example_0100.py  example_0100.txt  example_0110.cpp  example_0110.py  example_0110.txt  example_0120.cpp  example_0120.py  example_0400.cpp  (+99 more)
html/: pyhrol_en_doxy_footer.html  pyhrol_en_doxy_header.html  pyhrol_ru_doxy_footer.html  pyhrol_ru_doxy_header.html
include/: array_square.h  array_void.h  binary_operations.h  demangling.h  enum_shell.h  enum_shell.hpp  nullable.h  nullable.hpp  printf_fields.h  printf_fields.hpp  printf_parser.h  printf_parser.hpp  pyhrol.h  pyhrol_auto_holder.h  pyhrol_check_calls.h  pyhrol_common.h  pyhrol_container.h  pyhrol_container.hpp  pyhrol_exception_handler.h  pyhrol_flags.h  pyhrol_helpers.hpp  pyhrol_index.h  pyhrol_keywords.h  pyhrol_macro.h  pyhrol_ptr.h  pyhrol_ptr.hpp  pyhrol_self.h  pyhrol_self_functions.h  pyhrol_self_methods.h  pyhrol_self_modules.h  pyhrol_self_types.h  pyhrol_trace.h  pyhrol_tuple_base.h  pyhrol_tuple_base_safe.h  pyhrol_tuple_describer.h  pyhrol_tuple_describer_flexible.h  pyhrol_tuple_fill_state.h  pyhrol_tuple_fill_state_getsetter.h  pyhrol_tuple_fill_state_normal.h  pyhrol_tuple_format.h  (+45 more)
sh/maintain/: doxy_conf.sh
